tests/compiler/type_error/ir.disasm
Globals:

Function: f
block 0
  var return_value: void = None
  var x: float = None
  var temp2: void = None
  free(temp2)
  free(x)
  free(return_value)
  -> block 1

block 1
  -> return

Function: foo
block 0
  var return_value: string = None
  var temp1: void = None
  var xy: void = None
  var temp3: {int/signed} = Some(MaybeSignedInt(3))
  xy = temp3
  free(temp3)
  var y: void = None
  var temp5: {int/signed} = Some(MaybeSignedInt(2))
  y = temp5
  free(temp5)
  var z: void = None
  var temp7: void = None
  temp7 = xy + y
  z = temp7
  free(temp7)
  var temp8: void = None
  var temp9: int = None
  var temp10: int = None
  var temp11: void = None
  var temp12: void = None
  temp12 = xy
  temp11 = call f(temp12)
  temp8 = temp11
  free(temp12)
  free(temp11)
  free(temp10)
  free(temp9)
  free(temp8)
  return_value = z
  free(z)
  free(y)
  free(xy)
  free(temp1)
  free(return_value)
  -> block 2

block 1
  -> return

block 2
  -> block 1

block 3
  free(return_value)
  -> block 1

